# kogyo_bot

./: .env.example  Cargo.toml
src/: main.rs
src/aws/: aws.rs
src/commands/: minecraft.rs  mod.rs
