[package]
name = "kogyo_bot"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
serenity = "0.8"
rusoto_core = "0.43.0"
rusoto_autoscaling = "0.43.0"
rusoto_ssm = "0.43.0"
tokio = { version = "0.2", features = ["full"] }
